--- a/templates/HomePage.html
+++ b/templates/HomePage.html
@@ -10,7 +10,7 @@
 
     <style>
         .large-heading {
-            font-size: 2.5em; /* Adjust the size as needed */
+            font-size: 5.5em; /* Adjust the size as needed */
         }
         .bold-text {
             font-weight: bold; /* or 700 */
@@ -77,9 +77,11 @@
 <main class="bg-light" >
     <div class="container text-center my-5 ">
         <h2 class="large-heading text-dark">Start Your Reading or Writing Books Journey Here.</h2>
-        <button type="button" class="btn btn-dark mt-3 text-white custom-button ">Start Your Journey</button>
+        <button type="button" class="btn btn-dark mt-3 text-white custom-button "><a href="{% url 'sign_up' %}">Start Your Journey</a></button>
         <hr class="mt-5">
     </div>
+
+    
         
     <div class="container mt-4">
         <h2 class="large-heading container text-center my-5">About Communities..</h2>
