--- a/templates/AboutUsPage.html
+++ b/templates/AboutUsPage.html
@@ -75,10 +75,10 @@
                     <a class="nav-link text-white" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item mx-2">
-                    <a class="nav-link text-white" href="#">Reader Community</a>
+                    <a class="nav-link text-white" href="{% url 'reader_home_page'%}">Reader Community</a>
                 </li>
                 <li class="nav-item mx-2">
-                    <a class="nav-link text-white" href="#">Writer Community</a>
+                    <a class="nav-link text-white" href="{% url 'writer_home_page'%}">Writer Community</a>
                 </li>
                 <li class="nav-item mx-2">
                     <a class="nav-link text-white" href="{% url 'about_us' %}">About Us</a>
