--- a/templates/WriterProfile.html
+++ b/templates/WriterProfile.html
@@ -1,164 +1,286 @@
-{%load static%}
-<!DOCTYPE html>  
-<html>  
-<head> 
+{% load static %}
+<!DOCTYPE html>
+<html>
+<head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}"> 
-    <title>Reader Home Page</title>  
-</head>  
-<body>  
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <title>Reader Home Page</title>
+    <style>
+        img {
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+        }
+        .profile-header {
+            display: flex;
+            align-items: center;
+        }
+        .profile-header img {
+            margin-right: 15px;
+        }
+        .search-bar {
+            display: flex;
+            align-items: center;
+        }
+        .search-bar input {
+            width: 200px;
+        }
+        .card-columns {
+            column-count: 3;
+        }
+        .card {
+            margin-bottom: 15px;
+        }
+        <button class="btn btn-primary"><a class= "create" href="{%url 'create_book'%}">Create Book</a></button>
+        
+        .graph-image{
+            width: 100%;
+            height: 200px;
+            border-radius:0;
+            
+        }
+        .create-book{
+            color: white;
+            text-decoration: none;
+
+        }
+      .graph-image{
+        width: 100%;
+        height: 200px;
+        border-radius:0;
+      }
+      ul.book{
+        list-style-type:"📖";
+      }
+      ul.category{
+        list-style-type:none;
+      }
+     
+    </style>
+</head>
+<body>
 <header>
-    <img src="" alt="">
-    <h1>Reading & Writing Books</h1>
-    <a href="">Sign out</a>
-    <nav>
-        <ul>
-            <li><a href="HomePage.html">Home</a></li>
-            <li><a href="ReaderCommunity.html">Reader Community</li>
-            <li><a href="WriterCommunity.html">Writer Community</a></li>
-            <li><a href="AboutUsPage.html">Profile</a></li>
-            <li><a href="AboutUsPage.html">About Us</a></li>
-        </ul>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a id ="link" class="navbar-brand text-white" href="{% url 'home' %}">Reading & Writing Books</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
+            <ul class="navbar-nav mx-auto">
+                <li class="nav-item mx-2">
+                    <a class="nav-link text-white" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item mx-2">
+                    <a class="nav-link text-white" href="{% url 'reader_home_page' %}">Reader Community</a>
+                </li>
+                <li class="nav-item mx-2">
+                    <a class="nav-link text-white" href="{% url 'writer_home_page' %}">Writer Community</a>
+                </li>
+                <li class="nav-item mx-2">
+                    <a class="nav-link text-white" href="{% url 'reader_profile' %}">Profile</a>
+                </li>
+                <li class="nav-item mx-2">
+                    <a class="nav-link text-white" href="{% url 'about_us' %}">About Us</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link text-white" href="{% url 'sign_in' %}">Sign out</a>
+                </li>
+            </ul>
+        </div>
     </nav>
 
-<img src="" alt="">
-<a href="EditProfile.html">Edit Profile</a>
-<h3>User Name</h3>
-<input type="search" name="search" placeholder="Search">
-<div>
-    <h3>Bio</h3>
-    <p>User Bio goes here.</p>
-</div>
-<hr>
-</header>
-    <main>
-        <div class="row">
-            <div class="column">
-            <div class="card">
-                <div class="container">
-                <h2>Books Library</h2>
-                <p>Number of books goes here.</p>
-                </div>
-            </div>
-            </div>
-
-            <div class="column">
-            <div class="card">
-                <div class="container">
-                <h2>Book Categories</h2>
-                <p>Number of XP goes here.</p>
-                </div>
-            </div>
-            </div>
-            
-            <div class="column">
-            <div class="card">
-                <div class="container">
-                <h2>Daily Book Review</h2>
-                <p>graph goes here</p>
-                </div>
-            </div>
+    <div class="container mt-4">
+        <div class="profile-header">
+            <img src="https://img.freepik.com/free-photo/3d-render-little-boy-with-jacket-jeansie_1142-57736.jpg?ga=GA1.1.1189569181.1722467032&semt=ais_hybrid" alt="">
+            <div>
+                <a href="{%url 'edit_writer_profile'%}" class="btn btn-link">Edit Profile</a>
+                <h3>User Name</h3>
             </div>
         </div>
-    </main>   
-            <hr>
-            <section>
-                <div>
-                    <h3>Book Comments</h3>
-                    <input type="text" placeholder="Post..">
-                    <p>Posts content goes here.</p>
+        <div class="search-bar mt-3">
+            <input type="search" name="search" class="form-control" placeholder="Search">
+        </div>
+        <div>
+            <h3 class="mt-4">Bio</h3>
+            <p>User Bio goes here.</p>
+        </div>
+        <hr>
+    </div>
+</header>
+
+<main class="container">
+    <div class="row">
+        <div class="col-lg-4 col-md-6 mb-4">
+            <div class="card">
+                <div class="card-body">
+                    <h2 class="card-title">Books Library</h2>
+                    <ul class="book">
+                        <li>Book 1</li>
+                        <li>Book 2</li>
+                        <li>Book 3</li>
+                        <li>Book 4</li>
+                        <li>Book 5</li>
+                    </ul>
                 </div>
-                <aside>
-                    <button>Create Book</button>
-                    <hr>
-                    <button>Create Event</button>
-                </aside>
-            <div>
-                <h2>Books Table</h2>
-            <table>
+            </div>
+        </div>
+        <div class="col-lg-4 col-md-6 mb-4">
+            <div class="card">
+                <div class="card-body">
+                    <h2 class="card-title">Book Categories</h2>
+                    <ul class="category">
+                        <li>Category 1</li>
+                        <li>Category 2</li>
+                        <li>Category 3</li>
+                        <li>Category 4</li>
+                        <li>Category 5</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-4 col-md-6 mb-4">
+            <div class="card">
+                <div class="card-body">
+                    <h2 class="card-title">Daily Book Review</h2>
+                    <img src="https://alibrarymama.com/wp-content/uploads/2021/01/2020-summary.png" class="graph-image">
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
+
+<section class="container">
+    <div>
+        <h3>Book Comments</h3>
+        <input type="text" class="form-control" placeholder="Post..">
+        <p>Posts content goes here.</p>
+    </div>
+    <aside class="mt-4">
+        <button class="btn btn-primary "><a href="{%url 'create_book'%}" class="create-book">Create Book</a></button>
+        <hr>
+        <button class="btn btn-primary"><a href="{%url 'create_event'%}" class="create-book">Create Event</a></button>
+    </aside>
+    <div class="mt-4">
+        <h2>Books</h2>
+        <table class="table table-striped">
+            <thead>
                 <tr>
                     <th>Title</th>
                     <th>Book Genre</th>
                     <th>Description</th>
                     <th>Actions</th>
                 </tr>
+            </thead>
+            <tbody>
                 <tr>
-                    <td>To Kill a Mockingbird</td>
-                    <td>Harper Lee</td>
-                    <td>1960</td>
-                    <td><a href="">Edit</a> |<a href=""> Delete</a></td>
+                    <td><a href="{%url 'view_book_detail'%}">To Kill a Mockingbird</a></td>
+                    <td>Drama</td>
+                    <td>A novel by Harper Lee</td>
+                    <td><a href="{%url 'edit_book'%}">Edit</a> | <a href="{%url 'delete_book'%}">Delete</a></td>
                 </tr>
                 <tr>
-                    <td>1984</td>
-                    <td>George Orwell</td>
-                    <td>1949</td>
-                    <td><a href="">Edit</a> |<a href=""> Delete</a></td>
+                    <td><a href="{%url 'view_book_detail'%}">1984</a></td>
+                    <td>Dystopian</td>
+                    <td>A novel by George Orwell</td>
+                    <td><a href="{%url 'edit_book'%}">Edit</a> | <a href="{%url 'delete_book'%}">Delete</a></td>
                 </tr>
                 <tr>
-                    <td>The Great Gatsby</td>
-                    <td>F. Scott Fitzgerald</td>
-                    <td>1925</td>
-                    <td><a href="">Edit</a> |<a href=""> Delete</a></td>
+                    <td><a href="{%url 'view_book_detail'%}">The Great Gatsby</a></td>
+                    <td>Classic</td>
+                    <td>A novel by F. Scott Fitzgerald</td>
+                    <td><a href="{%url 'edit_book'%}">Edit</a> | <a href="{%url 'delete_book'%}">Delete</a></td>
                 </tr>
-            </table>
-            <h2>Events Table</h2>
-            <table>
+            </tbody>
+        </table>
+
+        <h2>Events</h2>
+        <table class="table table-striped">
+            <thead>
                 <tr>
                     <th>Book Title</th>
                     <th>Event Date</th>
                     <th>Event Description</th>
                     <th>Actions</th>
                 </tr>
+            </thead>
+            <tbody>
                 <tr>
-                    <td>To Kill a Mockingbird</td>
+                    <td><a href="{%url 'view_event_detail'%}">To Kill a Mockingbird</a></td>
                     <td>Harper Lee</td>
                     <td>1960</td>
-                    <td><a href="">Edit</a> |<a href=""> Delete</a></td>
+                    <td><a href="{%url 'edit_event'%}">Edit</a> | <a href="{%url 'delete_event'%}">Delete</a></td>
                 </tr>
                 <tr>
-                    <td>1984</td>
+                    <td><a href="{%url 'view_event_detail'%}">1984</td>
                     <td>George Orwell</td>
                     <td>1949</td>
-                    <td><a href="">Edit</a> |<a href=""> Delete</a></td>
+                    <td><a href="{%url 'edit_event'%}">Edit</a> | <a href="{%url 'delete_event'%}">Delete</a></td>
                 </tr>
                 <tr>
-                    <td>The Great Gatsby</td>
+                    <td><a href="{%url 'view_event_detail'%}">The Great Gatsby</td>
                     <td>F. Scott Fitzgerald</td>
                     <td>1925</td>
-                    <td><a href="">Edit</a> |<a href=""> Delete</a></td>
+                    <td><a href="{%url 'edit_event'%}">Edit</a> | <a href="{%url 'delete_event'%}">Delete</a></td>
                 </tr>
-            </table>
+            </tbody>
+        </table>
+    </div>
+</section>
 
-            
-        </section>
+<footer class="bg-dark text-white text-center text-lg-start mt-4">
+    <h3 class="p-3 bg-secondary">Reading & Writing Books</h3>
+    <div class="container p-4">
+        <div class="row">
+            <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+                <h5 class="text-uppercase">Contact</h5>
+                <ul class="list-unstyled mb-0">
+                    <li>
+                        <a href="mailto:contact@readingwritingbooks.com" class="text-white">Email: contact@readingwritingbooks.com</a>
+                    </li>
+                    <li>
+                        <a href="tel:+972321456897" class="text-white">Phone: +972 321 456 897</a>
+                    </li>
+                    <li>
+                        <a href="#" class="text-white">Address: Palestine, Ramallah</a>
+                    </li>
+                </ul>
             </div>
-    </main> 
-    <hr>
+            <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                <h5 class="text-uppercase">Company</h5>
+                <ul class="list-unstyled mb-0">
+                    <li>
+                        <a href="#" class="text-white">About Us</a>
+                    </li>
+                    <li>
+                        <a href="#" class="text-white">Privacy Policy</a>
+                    </li>
+                    <li>
+                        <a href="#" class="text-white">Terms of Service</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                <h5 class="text-uppercase">Follow Us</h5>
+                <ul class="list-unstyled mb-0">
+                    <li>
+                        <a href="#" class="text-white">Facebook</a>
+                    </li>
+                    <li>
+                        <a href="#" class="text-white">Twitter</a>
+                    </li>
+                    <li>
+                        <a href="#" class="text-white">Instagram</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</footer>
 
-    <footer>
-        <h3>Reading & Writing Books</h3>
-        <h4>Contact Us</h4>
-        <p><img src="https://img.icons8.com/?size=48&id=96403&format=png" alt="phone"> Phone Number: +972 321 456 897</p>
-        <p><img src="https://img.icons8.com/?size=48&id=35084&format=png" alt="email"> Email:  contact@readingwritingbooks.com</p>
-        <h4>Follow Us</h4>
-        <a href="#"><img src="https://img.icons8.com/?size=48&id=118497&format=png" alt="Facebook"></a>
-        <a href="#"><img src="https://img.icons8.com/?size=48&id=13963&format=png" alt="Twitter"></a>
-        <a href="#"><img src="https://img.icons8.com/?size=48&id=32323&format=png" alt="Instagram"></a>
-        <h4>Company</h4>
-        <a href="#">About Us</a>
-        <a href="#">Privacy Policy</a>
-        <a href="#">Terms of Service</a>
-        <a href="#">Cookie Policy</a>
-        <br>
-        <small> Copyright © Reading & Writing Books. All rights reserved.</small>
-    </footer>
-
-
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
-
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
-</body>  
-</html> 
+<script src="{% static 'js/jquery.min.js' %}"></script>
+<script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+</body>
+</html>
