--- a/templates/HomePage.html
+++ b/templates/HomePage.html
@@ -27,6 +27,144 @@
             padding: 20px;
             margin: 10px;
         }
+        *{
+            margin:0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        body{
+            overflow: hidden;
+        }
+        .aboutC-container{
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 1000px;
+            height: 600px;
+            background: #f5f5f5;
+            box-shadow: 0 30px 50px #dbdbdb;
+        
+        }
+        .aboutC-container .slide .item{
+            width:200px;
+            height:300px;
+            position:absolute;
+            top:50%;
+            transform: translate(0, -50%);
+            border-radius: 20px;
+            background-position: 50% 50%;
+            background-size: cover;
+            display: inline-block;
+            transition: 0.5s;
+        }
+        
+        .slide .item:nth-child(1),
+        .slide .item:nth-child(2){
+            top:0;
+            left:0;
+            transform: translate(0,0);
+            border-radius:  0;
+            width:100%;
+            height: 100%;
+        }
+        
+        .slide .item:nth-child(3){
+            left: 50%;
+        }
+        .slide .item:nth-child(4){
+            left: calc(50% + 220px);
+        }
+        .slide .item:nth-child(5){
+            left: calc(50% + 440px);
+        }
+        .slide .item:nth-child(n + 6){
+            left: calc(50% +660px);
+            opacity: 0;
+        }
+        .item .content{
+            position: absolute;
+            top:50%;
+            left:100px;
+            width: 300px;
+            text-align: left;
+            color: #eee;
+            transform: translate(0, -50%);
+            font-family: system-ui;
+            display: none;
+        }
+        .slide .item:nth-child(2) .content{
+            display: block;
+        
+        }
+        .content .name{
+            font-size: 40px;
+            text-transform: uppercase;
+            font-weight: bold;
+            opacity: 0;
+            animation: animate 1s ease-in-out 1 forwards;
+        
+        }
+        
+        .content .description{
+            margin-top: 10px;
+            margin-bottom: 20px;
+            opacity: 0;
+            animation: animate 1s ease-in-out 0.3s 1 forwards;
+            font-weight: bold;
+        
+        }
+        
+        .content button{
+            padding: 10px 20px;
+            border: none;
+            cursor: pointer;
+            opacity: 0;
+            animation: animate 1s ease-in-out 0.6s 1 forwards;
+        
+        }
+        @keyframes animate {
+            from{
+                opacity: 0;
+                transform: translate(0);
+                filter: blur(33px);
+            }
+            to{
+                opacity: 1;
+                transform: translate(0);
+                filter: blur(0px);
+            }
+            
+        }
+        
+        .button{
+            width: 100%;
+            text-align: center;
+            position: absolute;
+            bottom:20px;
+        
+        }
+        .button button{
+            width: 40px;
+            height: 35px;
+            border-radius: 8px;
+            border: none;
+            cursor: pointer;
+            margin: 0 5px;
+            border: 1px solid #000;
+            transition: 0.3s;
+        }
+        .button button:hover{
+            background: #ababab;
+            color: #fff;
+        
+        }
+        
+        
+
+
+
+
     </style>
 </head>  
 <body>  
@@ -61,18 +199,6 @@
             </ul>
         </div>
     </nav>
-    {% comment %} <img src="" alt="">
-    <h1>Reading & Writing Books</h1>
-    <a href="{%url 'sign_in'%}">Sign in</a>
-    <a href="{%url 'sign_up'%}">Sign up</a>
-    <nav>
-        <ul>
-            <li><a href="{%url 'home'%}">Home</a></li>
-            <li><a href="ReaderCommunity.html">Reader Community</li>
-            <li><a href="WriterCommunity.html">Writer Community</a></li>
-            <li><a href="">About Us</a></li>
-        </ul>
-    </nav> {% endcomment %}
 </header>
 <main class="bg-light" >
     <div class="container text-center my-5 ">
@@ -80,10 +206,54 @@
         <button type="button" class="btn btn-dark mt-3 text-white custom-button "><a href="{% url 'sign_up' %}">Start Your Journey</a></button>
         <hr class="mt-5">
     </div>
+    <h2 class="large-heading container text-center my-5">About Communities..</h2>
+    <div class="aboutC-container">
+            <div class="slide">
+                <div class="item" style="background-image: url(https://img.freepik.com/premium-photo/exciting-school-math-competition-group-school-kids-are-holding-math-books-competitio_1032630-11684.jpg?ga=GA1.1.1189569181.1722467032&semt=ais_hybrid);">
+                    <div class="content">
+                        <div class="name">Reader Community</div>
+                        <div class="description">Welcome to Book Enthusiasts United, a friendly and lively community where book lovers of all kinds come together to share their passion for reading! Whether you’re a casual reader or a die-hard bibliophile, you’ll find a warm and welcoming group here. From fiction to non-fiction, fantasy to mystery, and everything in between, we’ve got something for everyone.</div>
+                        <button>See More </button>
+                    </div>
+                </div>
+                <div class="item" style="background-image: url(https://img.freepik.com/premium-photo/cozy-library-study-session-with-friends_1280275-155845.jpg?ga=GA1.1.1189569181.1722467032&semt=ais_hybrid);">
+                    <div class="content">
+                        <div class="name">Writer Community</div>
+                        <div class="description">Welcome to Writers' Haven, a supportive and fun community for writers of all kinds! Whether you’re just starting out, a seasoned author, a poet, or a freelance writer, you’ll find a place here. We’re all about helping each other grow, improve, and succeed in our writing journeys.</div>
+                        <button>See More </button>
+                    </div>
+                </div>
+                <div class="item" style="background-image: url(https://img.freepik.com/premium-photo/quotfriends-unwinding-with-books-blanketsquot_1280275-131110.jpg?ga=GA1.1.1189569181.1722467032&semt=ais_hybrid);">
+                    <div class="content">
+                        <div class="name">Book Clubs Community </div>
+                        <div class="description">Welcome to The Book Club Communities, where we gather with a cup of tea and a good book to share our love for reading! Our club is all about enjoying great stories, lively discussions, and making new friends. Whether you’re a long-time bookworm or just rediscovering the joy of reading, you’ll find a warm and inviting space here.</div>
+                        <button>See More </button>
+                    </div>
+                </div>
+                <div class="item" style="background-image: url(https://img.freepik.com/premium-photo/buatkan-judul-dengan-7-kata-dan-30-keyword-untuk-freepik-metadata-dan-pisah-setiap-keyword-dengan-tanda-koma-setiap-keyword-hanya-1-kata_959624-75116.jpg?ga=GA1.1.1189569181.1722467032&semt=ais_hybrid);">
+                    <div class="content">
+                        <div class="name">Events Community </div>
+                        <div class="description">Welcome to Events communities, your go-to community for all things literary and fun! We host a variety of exciting events that bring book lovers and writers together in a vibrant and welcoming atmosphere. Whether it’s a book launch, a writing workshop, or a literary festival, there’s always something happening at Lit Lounge!</div>
+                        <button>See More </button>
+                    </div>
+                </div>
+                <div class="item" style="background-image: url(https://img.freepik.com/premium-photo/group-friends-sitting-floor-front-fireplace-reading-book_833104-18846.jpg?ga=GA1.1.1189569181.1722467032&semt=ais_hybrid);">
+                    <div class="content">
+                        <div class="name">About Us </div>
+                        <div class="description">Welcome to Book Enthusiasts United! We are a vibrant and friendly community of book lovers from all walks of life. Our passion for reading brings us together to share, discuss, and celebrate the wonderful world of books. Whether you enjoy fiction, non-fiction, fantasy, mystery, or any other genre, you’ll find kindred spirits here who share your love for reading. Our community is all about making connections, discovering new favorites, and enjoying the magic of books together. Join us for engaging discussions, exciting reading challenges, and the joy of being part of a supportive book-loving family.</div>
+                        <button>See More </button>
+                    </div>
+                </div>
 
-    
+            <div class="button">
+                <button class="prev"><i class="fa-solid fa-arrow-left"></i></button>
+                <button class="next"><i class="fa-solid fa-arrow-right"></i></button>
+            </div>
+            </div>
+
+        </div>
         
-    <div class="container mt-4">
+   <div class="container mt-4">
         <h2 class="large-heading container text-center my-5">About Communities..</h2>
             <div class="row">
             <div class="col-md-4">
@@ -108,10 +278,8 @@
                 </div>
             </div>
             </div>
-        </div>
-    {% comment %} <div></div>    
-    <div></div>  
-    <div></div> {% endcomment %}
+        </div> 
+    
         <hr>
     
         <div class="container mt-4">
@@ -149,45 +317,7 @@
             </div>
             </div>
         </div>
-    
 
-    {% comment %} <div class="row">
-        <div class="column">
-        <div class="card">
-            <img src="https://img.freepik.com/premium-photo/pixar-style-3d-cartoon-character_63106-3548.jpg" alt="Jane" style="width:30%">
-            <div class="container">
-            <h2>Atlas</h2>
-            <p class="title">CEO & Founder</p>
-            <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-            <p>example@example.com</p>
-            </div>
-        </div>
-        </div> {% endcomment %}
-
-        {% comment %} <div class="column">
-        <div class="card">
-            <img src="https://img.freepik.com/premium-photo/3d-beautiful-boy-cartoon-style_894067-16040.jpg" alt="Mike" style="width:30%">
-            <div class="container">
-            <h2>Mike</h2>
-            <p class="title">Art Director</p>
-            <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-            <p>example@example.com</p>
-            </div>
-        </div>
-        </div> {% endcomment %}
-        
-        {% comment %} <div class="column">
-        <div class="card">
-            <img src="https://img.freepik.com/premium-photo/animated-character-with-red-hair-orange-hair_893012-68515.jpg" alt="John" style="width:30%">
-            <div class="container">
-            <h2>Emily</h2>
-            <p class="title">Designer</p>
-            <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-            <p>example@example.com</p>
-            </div>
-        </div>
-        </div>
-    </div>    {% endcomment %}
 </main>
 <br>
         <footer class="bg-dark text-white text-center text-lg-start">
@@ -257,7 +387,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
 
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
-
+ <script></script
 
 {% comment %} <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
