--- a/templates/WriterHomePage.html
+++ b/templates/WriterHomePage.html
@@ -247,8 +247,11 @@
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto">
+                <li class="nav-item text-white">
+                    Welcome {{user.username}}
+                </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="{% url 'sign_in' %}">Sign out</a>
+                    <a class="nav-link text-white" href="{% url 'sign_out' %}">Sign out</a>
                 </li>
                 
             </ul>
